[package]
name = "simulation_of_simplicity"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.0"
float_expansion = { git = "https://github.com/josh65536/float_expansion", branch = "main" }

[dev-dependencies]
test-case = "1.1.0"