[package]
name = "simplicity_derive"
version = "0.2.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"
description = "Macros to help the implementation of simulation of simplicity (https://arxiv.org/pdf/math/9410209.pdf)"
license = "MIT"
keywords = ["geometry"]
categories = ["mathematics"]
repository = "https://github.com/josh65536/simplicity"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive", "full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0.24"
itertools = "0.10.0"
fnv = "1.0.7"
permutator = "0.4.0"
